refactored getters in Gameboard